--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -1,12 +1,20 @@
 # 云对讲
 
+* 启动本地`redis`
+
+  ```shell
+  cd /Applications/workspace/redisInstall/redis-5.0.2
+  ./src/redis-server redis.conf 
+  ./src/redis-cli -a qwer6379
+  ```
+
 * 更新功能之前，考虑下是否需要先造点旧数据，比如人脸识别升级
 
 * `BufferedImage image = ImageIO.read(inputStream);`返回为null
 
   * 因为该`inputStream`不是文件（图片）转换成的`inputStream`，不是图片流而是数据流，所以不能转成图片
 
-* 将将`MultipartFile`转为`File`
+* 将`MultipartFile`转为`File`
 
   ```java
   private File getFileByMultipartFile(MultipartFile multipartFile) {
@@ -81,6 +89,10 @@
   urlConnection.setConnectTimeout(5000);
   urlConnection.setReadTimeout(5000);
   urlConnection.getInputStream();
+  //Inputstream转为byte[]  import org.apache.commons.io.IOUtils;
+  IOUtils.toByteArray(con.getInputStream());
+  
+  new File(Objects.requireNonNull(LocalFileUtils.getFullPath(imgFullPath)))
   ```
   
 * ==人脸识别工具类中方法调用==
@@ -106,3 +118,72 @@
 
   * 异常信息应该包括两类信息：案发现场信息和异常堆栈信息。如果不处理，那么通过关键字==throws== 往上抛出`logger.error(各类参数或者对象toString() + "_" +e.getMessage(), e);`
 
+* maven中有GAV配置，但是依赖没下载下来，报错了
+
+  * 到本地maven仓库删除未下载完的依赖文件，然后会自动下载
+  
+* 将两个byte[]合并到一个新的byte[]
+
+  ```java
+  byte[] b = new byte[]{0x00, 0x00, 0x56, 0x04};
+  byte[] face = (byte[]) redislistObj.get(houseHolderBean.getFaceId());
+  
+  byte[] result = new byte[b.length + face.length];
+  //把b增加到face之前
+  System.arraycopy(b, 0, faceByte, 0, b.length);
+  System.arraycopy(face, 0, faceByte, b.length, face.length);
+  ```
+
+* 下载文件（可以测试验证下）
+  * 获取文件的输入流
+  * `IOUtils.copyLarge(文件流, HttpServletResponse.getOutputStream());`
+  * `HttpServletResponse.getOutputStream().flush()`
+  
+* 返回Bean中的属性是个图片文件
+  * 如果是本地的，则相对路径作为参数，传入到一个接口中，然后将接口地址及参数作为该Bean的属性返回
+  * 如果是其他系统的，如OSS，则返回Http链接
+  
+* 文件存服务器本地
+  * 完整的地址分为两段，更具有灵活性
+    * 第一段，在配置文件中配置，从服务器的根目录开始的几层目录
+    * 第二段，文件的相对路径，也是存入标中的路径
+  
+* StringUtils工具类
+
+  ```java
+  <dependency>
+  	<groupId>org.apache.commons</groupId>
+  	<artifactId>commons-lang3</artifactId>
+  	<version>3.0</version>
+  </dependency>
+  
+  StringUtils.defaultIfBlank(this.node, "")
+  ```
+
+* ==访问报错，第一时间去看服务器上日志==
+
+* ==善于用工具类==
+
+* 尽量避免重复代码，善于封装方法
+
+* boolean在MySQL里的类型为tinyint(1)
+
+  * POJO类中定义成boolean，在mysql中定义成tinyint(1)
+  
+* 多表更新
+
+  ```sql
+  UPDATE  t1
+  LEFT JOIN t2 ON t2.id = t1.id
+  SET     t1.col1 = newvalue
+  WHERE   t2.id IS NULL
+  ```
+
+* 从lov中查找数据（从数据库中），即新增数据时不用重新部署
+
+* ```java
+  private static DecimalFormat   fnum  =   new  DecimalFormat("##0.00");
+  fnum.format(score*100)
+  ```
+
+* `saveFacePhotoInfoToOSSAndTable
