--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -182,8 +182,80 @@
 * 从lov中查找数据（从数据库中），即新增数据时不用重新部署
 
 * ```java
-  private static DecimalFormat   fnum  =   new  DecimalFormat("##0.00");
+  private static DecimalFormat fnum = new DecimalFormat("##0.00");
   fnum.format(score*100)
   ```
 
-* `saveFacePhotoInfoToOSSAndTable
+* 分页
+
+  ```java
+  @GetMapping("/experiencesissue")
+  @ResponseBody
+  public Page<QualityIssue> queryExperience(PageQueryBean bean) {
+    return service.queryExperience(bean);
+  }
+  
+  public class PageQueryBean extends Page implements Serializable{
+    private String startTime;
+    private String endTime;
+    ...
+  }
+  
+  public class Page<T> implements Serializable{
+    private int page;
+    @JsonIgnore
+    private int startIndex;
+    private int size = 10;
+    private int totalPages;
+    private long count;
+    private List<T> data;
+    public Page<T> init(List<T> data, long count) {
+          this.data = data;
+          this.count = count;
+          this.totalPages = (int) ((count + size - 1) / size);
+          this.page = Math.max(1, page);
+          return this;
+    }
+    @JsonIgnore
+    public int getStartIndex() {
+      return Math.max(page - 1, 0) * size;
+    }
+    ...
+  }
+  
+  public Page<QualityIssue> queryExperience(PageQueryBean bean) {
+    Page<QualityIssue> result = new Page<>();
+    bean.setFormType("experience");
+    List<QualityIssue> list = dao.queryExperienceList(bean);
+    int count = dao.queryExperienceCount(bean);
+    return result.init(list, count);
+  }
+  ```
+
+  ```sql
+  SELECT
+  	<include refid="issueDetail"/>
+  from t_quality_issue
+  where form_type = #{formType}
+  <if test="startTime != null and startTime !=''">
+  	and create_time &gt;= #{startTime}
+  </if>
+  <if test="endTime != null and endTime !=''">
+  	and create_time &lt;= #{endTime}
+  </if>
+  order by last_update_time desc
+  limit #{startIndex}, #{size}
+  
+  SELECT
+  	count(*)
+  from t_quality_issue
+  where form_type = #{formType}
+  <if test="startTime != null and startTime !=''">
+  	and create_time &gt;= #{startTime}
+  </if>
+  <if test="endTime != null and endTime !=''">
+  	and create_time &lt;= #{endTime}
+  </if>
+  ```
+
+* 上传到服务器本地，从服务器本地下载
