--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -259,3 +259,29 @@
   ```
 
 * 上传到服务器本地，从服务器本地下载
+
+  ```java
+  // 上传时覆盖相同文件名
+  public static void main(String[] args) throws IOException {
+    File file = new File("/Users/dingyuanjie/Documents/study/github/22/redis.pdf");
+    File dir = new File("/Users/dingyuanjie/Documents/study/github/11/");
+    InputStream inputStream = new FileInputStream(file);
+    FileUtils.copyInputStreamToFile(
+      inputStream,
+      new File(dir.getCanonicalPath(), file.getName()));
+  }
+  ```
+
+* `! [remote rejected] master -> master (pre-receive hook declined)`
+
+  * 权限问题
+  
+* `BeanUtils`
+
+  ```java
+  //相同属性将被复制
+  BeanUtils.copyProperties(Object source, Object target);
+  ```
+
+* catch多个异常块，只会在一个异常块中处理
+* 建表时要加上`create_time`、`last_update_time`、`is_delete`、`create_user`、`last_update_user`
