--- a/all/设计模式.md
+++ b/all/设计模式.md
@@ -16,6 +16,11 @@
 
 # 常用设计模式
 
+* 抽象出的可重复利用的解决方案，可代表一些特定情况的最佳实践
+* 创建型模式，是对对象创建过程的各种问题和解决方案的总结，包括各种工厂模式(Factory、Abstract Factory)、单例模式(Singleton)、构建器模式(Builder)、原型模式(ProtoType ) 
+* 结构型模式，是针对软件设计结构的总结，关注于类、对象继承、组合方式的实践经验。常见的结构型模式，包括桥接模式(Bridge)、适配器模式(Adapter)、装饰者模式 (Decorator)、代理模式(Proxy)、组合模式(Composite)、外观模式(Facade)、享元模式(Flyweight)等 
+* 行为型模式，是从类或对象之间交互、职责划分等角度总结的模式。比较常见的行为型模式有策略模式(Strategy)、解释器模式(Interpreter)、命令模式(Command)、 观察者模式(Observer)、迭代器模式(Iterator)、模板方法模式(Template Method)、访问者模式(Visitor) 
+
 ## 简单工厂模式
 
 * 由一个工厂类根据传入的参数，动态决定应该创建哪一个产品类（不修改代码的话，是无法扩展），产品类实现同一个接口
@@ -178,6 +183,8 @@
 
 * 从一个对象再创建另外一个可定制的对象，而且不需要知道任何创建的细节，够被重复使用，而且互不干扰，如反射、克隆（序列化）
 
+* 在Bean的创建中，Spring也为不同scope定义的对象，提供了单例和原型等模式实现
+
 * Spring中的原型模式大多数用的是反射 
 
   ```java
@@ -232,19 +239,25 @@
 
 * 为其他对象提供一种代理以控制对这个对象的访问，代理只参与某一部分的功能
 
+  * 通过代理可以让调用者与实现者之间解耦
+
 * 代码场景，字节码增强、动态实现非侵入式编程
 
 * 静态代理：代码编译时就确定了被代理的类是哪一个，在代理之前，所有东西都是已知的（人工）
 
 * 动态代理：代码运行期间加载被代理的类，在代理之前，所有的东西都是未知的（智能化、自动化）
 
+  * 是一种方便运行时动态构建代理、动态处理代理方法调用的机制，如面向切面的编程(AOP)
   * JDK Proxy
-  * ==JDK中所要进行动态代理的类必须要实现一个接口，只能对该类所实现接口中定义的方法进行代理`InvocationHandler`==
+    * 所要进行动态代理的类必须要实现一个接口，只能对该类所实现接口中定义的方法进行代理`InvocationHandler`
+      * 提供一个基础的接口，作为被调用类型和代理类之间的统一入口
+      * 实现InvocationHandler，对代理对象方法的调用，会被分派到其invoke方法来真正实现动作
+      * 通过Proxy类，调用其newProxyInstance方法，生成一个实现了相应基础接口的代理类实例
     * 原理是在运行期间创建一个接口的实现类来完成对目标对象的代理
     * 通过反射机制生成代理类的字节码文件，调用具体方法前调用InvokeHandler来处理
   * Cglib
     * 为没有实现接口的类提供代理，为JDK的动态代理提供了很好的补充
-    * **CGLIB原理**：==动态生成一个要代理类的子类，子类重写要代理的类的所有不是final的方法。在子类中采用方法拦截的技术拦截所有父类方法的调用，顺势织入横切逻辑。`MethodInterceptor`==
+    * **CGLIB原理**：动态生成一个要代理类的子类，子类重写要代理的类的所有不是final的方法。在子类中采用方法拦截的技术拦截所有父类方法的调用，顺势织入横切逻辑。`MethodInterceptor`
     * 对于final方法，无法进行代理
   
   ```java
@@ -467,6 +480,8 @@
 ## 装饰器模式(Decorator) 
 
 * 需要包装，但不改变本质(同宗同源)，注重的扩展、覆盖，is-a
+  * InputStream是一个抽象类，标准类库中提供了FileInputStream、ByteArrayInputStream等各种不同的子类，分别从不同角度
+    对InputStream进行了功能扩展，这是典型的装饰器模式应用案例
 * 在Spring中Derocator结尾的、Wrapper结尾的都是
 
 ## 观察者模式(Observer) 
