--- a/all/设计模式.md
+++ b/all/设计模式.md
@@ -17,9 +17,15 @@
 # 常用设计模式
 
 * 抽象出的可重复利用的解决方案，可代表一些特定情况的最佳实践
-* 创建型模式，是对对象创建过程的各种问题和解决方案的总结，包括各种工厂模式(Factory、Abstract Factory)、单例模式(Singleton)、构建器模式(Builder)、原型模式(ProtoType ) 
-* 结构型模式，是针对软件设计结构的总结，关注于类、对象继承、组合方式的实践经验。常见的结构型模式，包括桥接模式(Bridge)、适配器模式(Adapter)、装饰者模式 (Decorator)、代理模式(Proxy)、组合模式(Composite)、外观模式(Facade)、享元模式(Flyweight)等 
-* 行为型模式，是从类或对象之间交互、职责划分等角度总结的模式。比较常见的行为型模式有策略模式(Strategy)、解释器模式(Interpreter)、命令模式(Command)、 观察者模式(Observer)、迭代器模式(Iterator)、模板方法模式(Template Method)、访问者模式(Visitor) 
+* 创建型模式
+  * 是对对象创建过程的各种问题和解决方案的总结
+  * 包括各种工厂模式(Factory、Abstract Factory)、单例模式(Singleton)、构建器模式(Builder)、原型模式(ProtoType ) 
+* 结构型模式
+  * 是针对软件设计结构的总结，关注于类、对象继承、组合方式的实践经验
+  * 包括适配器模式(Adapter)、装饰者模式 (Decorator)、代理模式(Proxy)、组合模式(Composite)、外观模式(Facade)、享元模式(Flyweight)、桥接模式(Bridge)等 
+* 行为型模式
+  * 是从类或对象之间交互、职责划分等角度总结的模式
+  * 包括策略模式(Strategy)、观察者模式(Observer)、模板方法模式(Template Method)、解释器模式(Interpreter)、命令模式(Command)、迭代器模式(Iterator)、访问者模式(Visitor) 
 
 ## 简单工厂模式
 
@@ -52,7 +58,9 @@
 
 ## 工厂方法模式
 
-* 针对每一种产品提供一个工厂类。通过不同的工厂实例来创建不同的产品实例，应用程序将对象的创建及初始化职责交给工厂对象 
+* 针对每一种产品提供一个工厂类
+
+* 通过不同的工厂实例来创建不同的产品实例，应用程序将对象的创建及初始化职责交给工厂对象 
 
   ```java
   public interface MilkFactory {
@@ -73,14 +81,16 @@
 
 ## 抽象工厂模式
 
-* 应对产品族概念的，比如说，每个汽车公司可能要同时生产轿车，货车，客车，那么每一个工厂都要有创建轿车，货车和客车的方法
+* 应对产品族概念
+
+* 比如每个汽车公司可能要同时生产轿车，货车，客车，那么每一个工厂都要有创建轿车，货车和客车的方法
 
 * 可以写公共逻辑，方便统一管理；易于扩展，（内部）用户不知道
 
   ```java
   public abstract class AbstractFactory {
-  //公共逻辑，方便统一管理
-  //方便扩张，（内部）用户不知道
+      //公共逻辑，方便统一管理
+      //方便扩张，（内部）用户不知道
       public abstract Milk getMengNiuMilk();
       public abstract Milk getYiLiMilk();
   }
@@ -105,7 +115,9 @@
   ```
 
 * 简单工厂 ： 用来生产同一等级结构中的任意产品。（对于增加新的产品，无能为力）
+
 * 工厂方法 ：用来生产同一等级结构中的固定产品。（支持增加任意产品）
+
 * 抽象工厂 ：用来生产不同产品族的全部产品。（对于增加新的产品，无能为力；支持增加产品族）
 
 ## 单例模式
@@ -237,11 +249,11 @@
 
 ## 代理模式
 
-* 为其他对象提供一种代理以控制对这个对象的访问，代理只参与某一部分的功能
+* 为其他对象提供一种代理以控制对这个对象的访问
 
+  * 代理只参与某一部分的功能
   * 通过代理可以让调用者与实现者之间解耦
-
-* 代码场景，字节码增强、动态实现非侵入式编程
+  * 代码场景，字节码增强、动态实现非侵入式编程
 
 * 静态代理：代码编译时就确定了被代理的类是哪一个，在代理之前，所有东西都是已知的（人工）
 
@@ -256,9 +268,9 @@
     * 原理是在运行期间创建一个接口的实现类来完成对目标对象的代理
     * 通过反射机制生成代理类的字节码文件，调用具体方法前调用InvokeHandler来处理
   * Cglib
-    * 为没有实现接口的类提供代理，为JDK的动态代理提供了很好的补充
-    * **CGLIB原理**：动态生成一个要代理类的子类，子类重写要代理的类的所有不是final的方法。在子类中采用方法拦截的技术拦截所有父类方法的调用，顺势织入横切逻辑。`MethodInterceptor`
+    * CGLIB原理：动态生成一个要代理类的子类，子类重写要代理的类的所有不是final的方法。在子类中采用方法拦截的技术拦截所有父类方法的调用，顺势织入横切逻辑。`MethodInterceptor`
     * 对于final方法，无法进行代理
+    * 为没有实现接口的类提供代理，为JDK的动态代理提供了很好的补充
   
   ```java
   // 静态代理
@@ -417,9 +429,8 @@
 
 ## 模板方法模式(Template Method) 
 
-* 流程固定，某一个环节有差异，一般是需要继承的 
+* 流程固定，某一个环节有差异，一般是需要继承，将一些步骤延迟到子类中，使子类可重新定义某些特定步骤
 * JdbcTemplate
-* （定义一个操作中的算法的骨架，而将一些步骤延迟到子类中。Template Method 使得子类可以不改变 一个算法的结构即可重定义该算法的某些特定步骤）
 
 ## 委派模式(Delegate)
 
@@ -462,7 +473,7 @@
       public static void main(String[] args){
           //客户请求（Boss）、委派者（Leader）、被被委派者（Target）
           //委派者要持有被委派者的引用
-  		//代理模式注重的是过程， 委派模式注重的是结果
+  		    //代理模式注重的是过程， 委派模式注重的是结果
           //策略模式注重是可扩展（外部扩展），委派模式注重内部的灵活和复用
           //委派的核心：就是分发、调度、派遣
           //委派模式：就是静态代理和策略模式一种特殊的组
@@ -473,15 +484,13 @@
 
 ## 适配器模式（Adapter）
 
-* 注重兼容、转换
+* 注重兼容、转换，适配者与被适配者之间没有层级关系，也没有必然联系，满足 has-a 的关系
 * Spring Adapter结尾的
-* 适配者与被适配者之间没有层级关系，也没有必然联系，满足 has-a 的关系
 
 ## 装饰器模式(Decorator) 
 
 * 需要包装，但不改变本质(同宗同源)，注重的扩展、覆盖，is-a
-  * InputStream是一个抽象类，标准类库中提供了FileInputStream、ByteArrayInputStream等各种不同的子类，分别从不同角度
-    对InputStream进行了功能扩展，这是典型的装饰器模式应用案例
+  * InputStream是一个抽象类，标准类库中提供了FileInputStream、ByteArrayInputStream等各种不同的子类，分别从不同角度对InputStream进行了功能扩展，这是典型的装饰器模式应用案例
 * 在Spring中Derocator结尾的、Wrapper结尾的都是
 
 ## 观察者模式(Observer) 
