--- a/all/设计模式.md
+++ b/all/设计模式.md
@@ -1,17 +1,17 @@
 # 六大原则
 
-* 单一职责原则Single Responsibility Principle
+* 单一职责原则`Single Responsibility Principle`
   * 就一个类而言，应该只有一个引起它变化的原因，实现类要职责单一
   * 类的复杂度降低，降低了变更引起的风险
-* 开闭原则Open Close Principle 
+* 开闭原则`Open Close Principle` 
   * 要对扩展开放，对修改关闭，需要使用接口和抽象类
-* 里氏代换原则Liskov Substitution Principle 
+* 里氏代换原则`Liskov Substitution Principle `
   * 任何基类可以出现的地方，子类一定可以出现，能保证子类完美替换基类，增强程序的健壮性，即使增加了子类，原有的子类还可以继续运行
-* 迪米特法则(最少知道原则)(Demeter Principle) 
+* 迪米特法则(最少知道原则)`Demeter Principle`
   * 一个实体应当尽量少的与其他实体时间发生相互作用，使得系统功能模块相对独立，类间解耦
-* 接口隔离原则(Interface Segregation Principle) 
+* 接口隔离原则`Interface Segregation Principle` 
   * 在设计接口的时候要精简单一，为各个类建立专用的接口，而不要试图去建立一个很庞大的接口供所有依赖它的类去调用
-* 依赖倒转原则Dependence Inversion Principle 
+* 依赖倒转原则`Dependence Inversion Principle` 
   * 面向接口编程，依赖于抽象而不依赖于具体，通过抽象（接口或抽象类）使个各类或模块的实现彼此独立，互不影响，实现模块间的松耦合
 
 # 常用设计模式
@@ -19,7 +19,7 @@
 * 抽象出的可重复利用的解决方案，可代表一些特定情况的最佳实践
 * 创建型模式
   * 是对对象创建过程的各种问题和解决方案的总结
-  * 包括各种工厂模式(Factory、Abstract Factory)、单例模式(Singleton)、构建器模式(Builder)、原型模式(ProtoType ) 
+  * 包括各种工厂模式(Factory、Abstract Factory)、单例模式(Singleton)、原型模式(ProtoType ) 、构建器模式(Builder)、
 * 结构型模式
   * 是针对软件设计结构的总结，关注于类、对象继承、组合方式的实践经验
   * 包括适配器模式(Adapter)、装饰者模式 (Decorator)、代理模式(Proxy)、组合模式(Composite)、外观模式(Facade)、享元模式(Flyweight)、桥接模式(Bridge)等 
