--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -426,3 +426,30 @@
   * 登录、拦截器
   * socketIO
   * hessian
+  
+* oracle批量插入
+
+  ```xml
+  <insert id="saveAttachmentForm" useGeneratedKeys="false" keyColumn="id">
+          insert into portal_attachment_form
+          (formId,attachmentId,orderNumber,indexName,groupId,company_code,opt_counter,create_time,last_update_time,create_user,last_update_user)
+  
+          <foreach collection="attachmentForms" item="obj" index="index"
+                   separator=" union all ">
+              select #{obj.formId} as formId,
+                     #{obj.attachmentId} as attachmentId,
+                     #{obj.orderNumber} as orderNumber,
+                     #{obj.indexName} as indexName,
+                     #{obj.groupId} as groupId,
+                     #{companyCode} as companyCode,
+                     1,
+                     sysdate as sysdate1,
+                     sysdate as sysdate2,
+                     #{requestUser} as requestUser1,
+                     #{requestUser} as requestUser2
+              from dual
+          </foreach>
+      </insert>
+  ```
+
+* 即使前端传字符串，后端startTime和endTime定成Date类型，可以在接收之前将字符串类型转为Date类型，然后时间之间可以直接比较大小
