--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -615,13 +615,125 @@
 
 * 仔细排查问题，一步一步向上排查，attachment，company_code为null
 
+* 序列化/反序列化
 
+  ```java
+  // 序列化
+  byte[] serialize(Object obj);
+  // 反序列化
+  <T> T deserialize(Class<T> clazz, byte[] bytes);
+  ```
+
+* 递增叠加尝试次数
+
+  ```java
+  public static void test(int maxTry) {
+    int order = 5 - maxTry + 1;
+    int delay = 1 << order;
+    System.out.println("delay:" + delay); // 2、4、8、16、32
+    if(order == 5) {
+      return ;
+    }
+    test(5 - order);
+  }
+  ```
 
 # Byton
 
 * 初始化项目，gradle报插件异常
   * 解决：不要用brew，要下载安装包、解压、配置环境变量、引入到idea中
   * command + ,   设置gradle环境为 …/bin
+  * 根源在于gradle环境没有安装对，要按照官网步骤来进行安装
 * 运行时sl4j的log：查找不到log符号，但是java文件中没有报错
-  * 重新安装lombok
+  
+  * command + ,  然后 Annotation Processors 勾选 enable annotation processing
+
+* String.format("%03d", str)
+
+  * 如果str为1，则结果为001，如果str为2000，则结果为2000
+
+* 新增和编辑时都要考虑是否会导致重复
+
+* 不通类型的各自序列号递增
+
+  * 表：类型，当前值、步长
+
+  * 先根据类型查询数据库
+
+    * 如果为null，则设置类型、当前值、步长，然后返回当前值
+    * 否则，直接返回当前值
+
+  * 然后，按照步长递增当前值
+
+    ```java
+    // 防止sql注入
+    String sql = MessageFormat.format("update {0} set {1}={1}+{2} where {3} = ?",
+                    Sequence._table,
+                    Sequence._curVal,
+                    Sequence._increment,
+                    Sequence._id);
+    jdbcTemplate.update(sql, seq.getId());
+    ```
+
+  * 考虑事务
+
+    ```java
+    @Transactional(isolation = Isolation.SERIALIZABLE)
+    //方法
+    ```
+
+  * 序列号修改时，考虑继续递增，还是保持不变，只修改其他部分内容
+
+```java
+List<Student> stuList = new ArrayList<Student>();
+        Student st1 = new Student("123","aaa");
+        Student st2 = new Student("234","bbb");
+        Student st3 = new Student("345","ccc");
+        Student st4 = new Student("345","ccc");
+        stuList.add(st1);
+        stuList.add(st2);
+        stuList.add(st3);
+        stuList.add(st4);
+        //1.提取出list对象中的一个属性
+        List<Object> stIdList1 = stuList.stream()
+                .map(Student::getName)
+                .collect(Collectors.toList());
+        stIdList1.forEach(s -> System.out.print(s+" "));
+        System.out.println();
+        System.out.println("----------");
+
+
+
+// 字符串，否则精度有问题
+        BigDecimal b = new BigDecimal("0.00450");
+        BigDecimal multiply = b.multiply(FinanceProductUtil.getBigDecimalByInt(10000));
+
+        System.out.println(String.format("%04d",multiply.intValue()));
+```
+
+```java
+// 产品，基本信息—+多个feature，一个feature代表一个产品，重复性校验一条插入一条
+// 更新状态：有问题（查出所有产品，然后遍历判断状态并更新状态），解决：直接根据条件更新，不用查所有再判断
+// 未发布 变为 不可发布
+        String sqlUnPublishToCanNotPublish = "update byton_vendor_finance_product set product_status = :statusAfter " +
+                "where product_status = :statusBefore and period_of_validity_startdate <= date_format(now(), '%Y-%m-%d') and period_of_validity_enddate >= date_format(now(), '%Y-%m-%d')";
+        Map<String, Integer> paramUpublishToCanNotPublishParam = new HashMap<>();
+        paramUpublishToCanNotPublishParam.put("statusAfter", FinanceProductStatusEnum.UNPUBLISHED.getValue());
+        paramUpublishToCanNotPublishParam.put("statusBefore", FinanceProductStatusEnum.CAN_NOT_PUBLISH.getValue());
+        jdbcTemplate.update(sqlUnPublishToCanNotPublish, paramUpublishToCanNotPublishParam);
+```
+
+```java
+// mysql
+order by FIELD(`product_status` , 0, 1, 2, 3, 4), product.creation_date desc  
+
+// 如果编辑比较复杂，则直接删除然后新增
+// 可以建立配置表用来维护字段信息
+// 编辑时考虑未修改数据直接提交，校验要通过
+// 列表排序规则
+// mysql bit 对应 java true和false
+// mysql like ?  , 参数  "%" + param + "%"
+// 有上级时，要注意是否要在上级的范围内查询
+	// 如 名片需要在某子机构中查询
+```
 
