--- a/all/设计模式.md
+++ b/all/设计模式.md
@@ -21,7 +21,7 @@
   * 是对对象创建过程的各种问题和解决方案的总结
   * 包括各种工厂模式(Factory、Abstract Factory)、单例模式(Singleton)、原型模式(ProtoType ) 、构建器模式(Builder)、
 * 结构型模式
-  * 是针对软件设计结构的总结，关注于类、对象继承、组合方式的实践经验
+  * 是针对软件设计结构的总结，关注于类、对象、继承、组合方式的实践经验
   * 包括适配器模式(Adapter)、装饰者模式 (Decorator)、代理模式(Proxy)、组合模式(Composite)、外观模式(Facade)、享元模式(Flyweight)、桥接模式(Bridge)等 
 * 行为型模式
   * 是从类或对象之间交互、职责划分等角度总结的模式
