--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -735,5 +735,15 @@ order by FIELD(`product_status` , 0, 1, 2, 3, 4), product.creation_date desc
 // mysql like ?  , 参数  "%" + param + "%"
 // 有上级时，要注意是否要在上级的范围内查询
 	// 如 名片需要在某子机构中查询
+// get请求不要用json形式参数，用params
+// 被终止后还能否再次创建（重复性校验增加未终止）
+```
+
+```sql
+-- mysql实现distinct限制几列而查多列的方法  使用group by
+SELECT *
+FROM byton_vendor_partner_subsidiary
+WHERE (parent_id = '5d382902e4b06fa517c9682a')
+GROUP BY city_code, province_code
 ```
 
