--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -747,3 +747,28 @@ WHERE (parent_id = '5d382902e4b06fa517c9682a')
 GROUP BY city_code, province_code
 ```
 
+```xml
+云对讲 
+<dependency>
+  <groupId>org.springframework.session</groupId>
+  <artifactId>spring-session-data-redis</artifactId>
+  <version>RELEASE</version>
+  <!--<version>2.1.7.RELEASE</version>-->
+</dependency>
+
+<repository>
+  <id>aliyun-central</id>
+  <name>aliyun</name>
+  <url>https://maven.aliyun.com/repository/central</url>
+</repository>
+
+<repository>
+  <id>efast</id>
+  <name>efast</name>
+  <url>http://139.224.22.150:8081/nexus/content/groups/public/</url>
+  <snapshots>
+    <enabled>true</enabled>
+  </snapshots>
+</repository>
+```
+
