--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -1,5 +1,9 @@
 # 云对讲
 
+* 查看服务器日志
+  
+* `[efastuser@hd2befastserv60 apache-tomcat-community-https-5090]$ tail -400f logs/community-socket/all.log`
+  
 * 启动本地`redis`
 
   ```shell
@@ -770,5 +774,22 @@ GROUP BY city_code, province_code
     <enabled>true</enabled>
   </snapshots>
 </repository>
+```
+
+```java
+// 判断对象是否序列化，HashMap已序列化
+obj instanceof Serializable
+```
+
+```java
+// 报空指针异常，说明不是request请求 ——> 调用service不需要进行登录验证 @hessianService(needAuth = false)
+public static HttpServletRequest getRequest() {
+return ((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).getRequest();
+}
+```
+
+```java
+// MySQL Connection is Read-only ....
+//查看 AOP 数据库事务设置，发现以 get开头的方法里只能读取，不能update、insert等操作
 ```
 
