--- a/all/设计模式.md
+++ b/all/设计模式.md
@@ -228,6 +228,8 @@
 
   ```java
   // 深克隆，属性中的对象不是同一个
+  @Getter
+  @Setter
   public class DeepPerson implements Cloneable,Serializable {
       private String name;
       private Email email;
@@ -243,7 +245,6 @@
           ObjectInputStream ois = new ObjectInputStream(bis);
           return (DeepPerson)ois.readObject();
       }
-    getter()、setter()...
   }
   ```
 
