--- a/item/云对讲项目.md
+++ b/item/云对讲项目.md
@@ -1,4 +1,124 @@
-### 先看五遍代码、先看五遍代码、先看五遍代码，然后再自己总结，不要一开始就总结
+# Readme
+
+```java
+// 先看五遍代码、先看五遍代码、先看五遍代码，然后再自己总结，不要一开始就总结
+```
+
+# 架构图
+
+# 数据库
+
+# APP
+
+```java
+// 有些接口考虑防刷
+
+// 发送验证码
+	手机号和验证码类型（注册或找回密码）
+// 注册
+	手机号、密码、验证码
+// 修改密码
+	旧密码、新密码、新密码确认
+// 重新设置密码
+	手机号、密码、验证码
+// 获取token
+	手机号、密码
+// 根据token获取session信息
+	token
+	sessionId
+// 退出登录
+// 版本更新
+	每次打开app时会调用该接口，当平台发布新版本app后，如果当前app的versionName低于接口中返回的versionName，则当前app可进行更新
+	版本名称、下载地址、更新时间、手机类型（android/ios）、更新日志、是否强制更细
+// 扫描二维码获取社区结构树
+	communityId
+// 获取社区节点分类（期、区、栋幢、单元、房屋）
+	communityId
+// 绑定房间重复性校验(填写绑定房间数据之前的重复绑定校验)
+	areaId
+// 提交绑定房间数据（基本信息-必须，人脸信息-不必须）
+	...
+// 新增人脸    
+    appBindId、人脸图片OSS路径
+// 查询上次审核通过的人脸信息
+// 查看所有房间绑定状态
+// 房间切换
+   appBindId 
+// 解绑房间
+	companyCode、appBindId	
+// 获取呼叫的门口机列表
+	appBindId
+	门口机名称、编号、网易云账号
+// 获取呼叫的管理员机列表
+	appBindId
+	管理员机、编号、网易云账号
+// 查看紧急密码和一次性密码
+	appBindId
+	紧急密码、一次性密码、一次性密码有效期
+// 生成一次性密码
+	appBindId
+// 获取房间一次性密码生成记录(每页20条)
+	appBindId、start、length
+// 查看房间呼叫记录（每页20条）
+	appBindId、是否接听（全部、未接、拒接、已接、无法接听）、start、length
+// 查询房间开门记录（每页20条）	
+	appBindId、开门方式（全部、刷卡、密码、呼叫app、人脸开门）、start、length
+// 开门记录详情
+	recordId
+	开门方式（全部、刷卡、紧急密码、一次性密码、呼叫app、人脸开门）、门口机名称、app姓名/门禁卡号/密码、图片地址、成功/失败、开门时间
+// 一键通数据查询(社区信息、警务室信息)
+	companyCode
+	图标、图片、电话、地址、描述信息
+// 公告列表（分页20条）	
+	companyCode、start、length
+	标题、内容、图片、最后更新时间
+// 根据标题搜索公告（分页20条）
+	title、start、length
+// app发出开门指令
+	appBindId、门口机网易云账号
+// 查看视像
+	appBindId
+	门口机：名称、编码、网易云账号
+// 上传呼叫日志（主动呼叫方上传）
+	companyCode、appBindId、呼叫唯一标志、呼出方网易云账号、呼入方网易云账号、呼叫开始结束时间、呼叫状态、呼叫类型（app呼叫门口机）
+// 获取主叫方显示名（app被呼叫时）
+	主动呼叫方网易云账号
+	主动呼叫方：社区名、名称
+// 文件上传（图片）	
+	上传文件类型、文件（Base64）
+	OSS相对路径
+// 主动呼叫时上传绑定信息供被呼叫方显示
+	appBindId、app网易云账号、被呼叫方网易云账号
+// 意见反馈
+	appBindId、图片（base64）、内容（base64）、手机号、邮箱
+// 	
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 
+
+
 
 
 
