--- a/all/设计模式.md
+++ b/all/设计模式.md
@@ -24,8 +24,8 @@
   * 是针对软件设计结构的总结，关注于类、对象、继承、组合方式的实践经验
   * 包括适配器模式(Adapter)、装饰者模式 (Decorator)、代理模式(Proxy)、组合模式(Composite)、外观模式(Facade)、享元模式(Flyweight)、桥接模式(Bridge)等 
 * 行为型模式
-  * 是从类或对象之间交互、职责划分等角度总结的模式
-  * 包括策略模式(Strategy)、观察者模式(Observer)、模板方法模式(Template Method)、解释器模式(Interpreter)、命令模式(Command)、迭代器模式(Iterator)、访问者模式(Visitor) 
+  * 是从类或对象之间交互、职责划分等角度的总结
+  * 包括模板方法模式(Template Method)、策略模式(Strategy)、观察者模式(Observer)、解释器模式(Interpreter)、命令模式(Command)、迭代器模式(Iterator)、访问者模式(Visitor) 
 
 ## 简单工厂模式
 
