--- a/item/云对讲项目.md
+++ b/item/云对讲项目.md
@@ -12,28 +12,54 @@
 
 ```java
 // 有些接口考虑防刷
+app用户只在t_user表
 
 // 发送验证码
 	手机号和验证码类型（注册或找回密码）
+	（验证用户是否已注册、验证手机号格式、随机生成验证码，调用阿里短信api、选择短信模版，验证码存入redis10分钟有效）
 // 注册
 	手机号、密码、验证码
+	（验证手机号格式、验证redis中验证码、验证是否已注册、Md5PasswordEncoder加密密码存入t_user表、注册成功后删除redis中验证码）
 // 修改密码
 	旧密码、新密码、新密码确认
+	（输入的旧密码MD5加密后和数据库中查找出的密码进行比对、更新t_user表中相应密码）
 // 重新设置密码
 	手机号、密码、验证码
+	（验证用户是否存在、更新t_user表密码）
 // 获取token
 	手机号、密码
+	（验证用户是否存在，验证密码，uuid作token、username、companyCode、session数、有效时间构造RedisSession来创建session）
+	（校验RedisSeesion中属性：过期时间、uid（username）、token不能为空）
+	（redis：
+			Hash：key-rs:http:token，即设置为RedisSession中rsKey值，value-RedisSession ）
+			ZSet：key-rs:http:userTokens:companyCode:username，value-rsKey，score-当前时间
+				// 只能登录一个
+				判断ZSet的size，range取出0-倒数第二之间的values，即rsKeys
+					ZSet删除这些rsKeys
+					redis中删除key-rsKey
+				// 统计登录在线用户（如果是正常退出登录（不是被踢下线），则需要删除）
+        	Set：key-rs:http:alive_users，value-rsKey
+      Set：key-key-rs:http:alive_users，value-rsKey   
+      更新Hash中key的过期时间
+      更新ZSet中key的过期时间
+      返回token
 // 根据token获取session信息
 	token
-	sessionId
+	(根据token去redis中查找RedisSession)
+	sessionId-token、username、companyCode
 // 退出登录
+	Filter 会根据 token查找用户信息RedisSession设置到Session（Auth_Bean,RedisSession）
+	退出登录时根据token，删除Redis中的rsKey
 // 版本更新
 	每次打开app时会调用该接口，当平台发布新版本app后，如果当前app的versionName低于接口中返回的versionName，则当前app可进行更新
 	版本名称、下载地址、更新时间、手机类型（android/ios）、更新日志、是否强制更细
+	（app_version_update版本基本信息、t_community_vurd更新记录-status）
 // 扫描二维码获取社区结构树
 	communityId
+	t_community_area表取出社区所有节点，遍历，只有一个根节点，最后返回根节点即可
 // 获取社区节点分类（期、区、栋幢、单元、房屋）
 	communityId
+	t_community_alias
 // 绑定房间重复性校验(填写绑定房间数据之前的重复绑定校验)
 	areaId
 // 提交绑定房间数据（基本信息-必须，人脸信息-不必须）
