--- a/item/踩坑记.md
+++ b/item/踩坑记.md
@@ -21,6 +21,7 @@
 	// 如 名片需要在某子机构中查询
 // get请求不要用json形式参数，用params
 // 被终止后还能否再次创建（重复性校验增加未终止）
+// 前端传递参数中id不为空则编辑，否则为新增
 ```
 
 # 云对讲
@@ -800,35 +801,10 @@ return ((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).
 * lambda
 
   ```java
-  //Lambda 是一个匿名函数，可以把 Lambda表达式 理解为是一段可以传递的代码 (将代码像数据一样进行传递)。
+  //Lambda 是一个匿名函数，可以把 Lambda表达式 理解为一段代码可以作为参数。
   // 可以写出更简洁、更灵活的代码。作为一种更紧凑的代码风格，使Java的语言表达能力得到了提升
   // Lambda 表达式的参数列表 -> Lambda 表达式中所需执行的功能， 即 Lambda 体
-  // 语法格式一 : 无参数，无返回值     () -> System.out.println("Hello Lambda!");
-  // 语法格式二 : 有一个参数，并且无返回值  (x) -> System.out.println(x)
-  // 语法格式三 : 若只有一个参数，小括号可以省略不写    x -> System.out.println(x)
-  // 语法格式四 : 有两个以上的参数，有返回值，并且 Lambda 体中有多条语句
-  Comparator<Integer> com = (x, y) -> {
-    System.out.println("函数式接口");
-    return Integer.compare(x, y);
-  };
-  // 语法格式五 : 若 Lambda 体中只有一条语句， return 和 大括号都可以省略不写
-  // Comparator<Integer> com = (x, y) -> Integer.compare(x, y);
-  // 语法格式六 : Lambda 表达式的参数列表的数据类型可以省略不写，因为JVM编译器通过上下文推断出，数据类型，即“类型推断”
-  // (Integer x, Integer y) -> Integer.compare(x, y);
-  
-  /**
-           * 方法引用
-           * 若 Lambda 体中的功能，已经有方法提供实现，可以使用方法引用 (可以将方法引用理解为 Lambda 表达式的另外一种表现形式)
-           * 1> 对象的引用 :: 实例方法名
-           * 2> 类名 :: 静态方法名
-           * 3> 类名 :: 实例方法名
-           * 注 : 1> 方法引用所引用的方法的参数列表与返回值类型，需要与函数式接口中抽象方法的参数列表和返回值类型保持一致(就是函数签名和返回值一致)
-           *      2> 若Lambda 的参数列表的第一个参数，是实例方法的调用者，第二个参数(或无参)是实例方法的参数时，格式 : ClassName::MethodName
   */
-  
-  // Lambda 表达式作为参数传递
-  Comparator<Integer> comparator = (o1, o2) -> Integer.compare(o1, o2);
-  TreeSet<Integer> treeSet = new TreeSet<>(comparator);
   
   // Java 8之前：
   new Thread(new Runnable() {
@@ -912,7 +888,7 @@ return ((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).
   });
   map.forEach((k,v)->System.out.println("k:" + k + ", v:" + v));
   ```
-
+  
 * 数据结构
 
   ```json
@@ -1191,6 +1167,16 @@ return ((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).
 * 附件较大，是下载完后状态改为已下载，还是点击下载就改为已下载
   * 附件下载完，改为已下载
   * 签收，点击下载就签收
+  
 * 回传和下载是不同的文件
+  
   * 附件分组
+  
+* jpa + oracle，序列不存在
+
+  * ```java
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    ```
 
